Updated the code

--- a/index.html
+++ b/index.html
@@ -35,16 +35,46 @@
         <section id="mods" class="content-section">
             <div class="container">
                 <h2>Mods</h2>
-                <p>Discover and download the latest mods for X4: Foundations.</p>
-                <!-- Add mod cards or a gallery here -->
+                <div class="grid">
+                    <div class="card">
+                        <h3>Mod 1</h3>
+                        <p>Description of Mod 1.</p>
+                        <a href="#" class="btn">Download</a>
+                    </div>
+                    <div class="card">
+                        <h3>Mod 2</h3>
+                        <p>Description of Mod 2.</p>
+                        <a href="#" class="btn">Download</a>
+                    </div>
+                    <div class="card">
+                        <h3>Mod 3</h3>
+                        <p>Description of Mod 3.</p>
+                        <a href="#" class="btn">Download</a>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section id="guides" class="content-section">
             <div class="container">
                 <h2>Guides</h2>
-                <p>Learn the best strategies and tips for mastering X4: Foundations.</p>
-                <!-- Add guide links or articles here -->
+                <div class="grid">
+                    <div class="card">
+                        <h3>Guide 1</h3>
+                        <p>Description of Guide 1.</p>
+                        <a href="#" class="btn">Read More</a>
+                    </div>
+                    <div class="card">
+                        <h3>Guide 2</h3>
+                        <p>Description of Guide 2.</p>
+                        <a href="#" class="btn">Read More</a>
+                    </div>
+                    <div class="card">
+                        <h3>Guide 3</h3>
+                        <p>Description of Guide 3.</p>
+                        <a href="#" class="btn">Read More</a>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -52,7 +82,7 @@
             <div class="container">
                 <h2>Forum</h2>
                 <p>Join the community and discuss all things X4: Foundations.</p>
-                <!-- Add forum links or embed a forum widget here -->
+                <a href="#" class="btn">Visit Forum</a>
             </div>
         </section>
 
